Update config of robot

--- a/components/app/index.html
+++ b/components/app/index.html
@@ -7,7 +7,7 @@
 <meta name="author" content="appannie">
 <meta name="version" content="1.0">
 <link rel="icon" href="../favicon.ico">
-<link rel="stylesheet" type="text/css" href="./main.css">
+<link rel="stylesheet" type="text/css" href="./main.css?_gm_inline">
 </head>
 <body id="bg_scene">
 
