--- a/components/app/robot/robot.html
+++ b/components/app/robot/robot.html
@@ -1,5 +1,5 @@
-<div id="x_robert_ctn" x-robert-display="hide" x-moveing="false" class="x-robert-ctn" style="display: none;">
-  <div data-depth="0.10" id="x_robert_body" class="x-robert-body layer">
+<div id="x_robot_ctn" x-robot-display="hide" x-moveing="false" class="x-robot-ctn" style="display: none;">
+  <div data-depth="0.10" id="x_robot_body" class="x-robot-body layer">
     <img class="x-rb-body-img" style="width: 70px;" src="/static/app/robot/img/0.png" />
   </div>
   <!-- <div id="x_rb_menugroup" class="tooltip right">
@@ -7,7 +7,7 @@
   </div>
   -->
   <!-- dialog -->
-  <div id="x_robert_dialog" class="tooltip right x-rb-dialog layer" data-depth="0.60" style="display: none;">
+  <div id="x_robot_dialog" class="tooltip right x-rb-dialog layer" data-depth="0.60" style="display: none;">
     <div class="tooltip-arrow"></div>
     <div class="tooltip-inner span6">
       <ul>
