--- a/components/app/robot/robot.scss
+++ b/components/app/robot/robot.scss
@@ -1,8 +1,8 @@
 
 
 /* Reset */
-#x_robert_ctn ul { list-style: none; list-style-type: none; padding: 0; margin: 0;}
-#x_robert_ctn li { list-style: none; list-style-type: none; padding: 0; margin: 0;}
+#x_robot_ctn ul { list-style: none; list-style-type: none; padding: 0; margin: 0;}
+#x_robot_ctn li { list-style: none; list-style-type: none; padding: 0; margin: 0;}
 
 
 .span6 {
@@ -101,14 +101,14 @@ border-color: #C5C5C5;
 border-color: rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.25);
 }
 
-.x-robert-ctn { position: fixed; /*top: 300px;*/ bottom: 40px; left: 40px; height: 72px; z-index: 999;  cursor: pointer; }
+.x-robot-ctn { position: fixed; /*top: 300px;*/ bottom: 40px; left: 40px; height: 72px; z-index: 999;  cursor: pointer; }
 
-#x_robert_body img {width: 70px;}
+#x_robot_body img {width: 70px;}
 
 .x-rb-dialog { opacity: 0.8; top: -6px; left: 66px; cursor: auto;}
 .x-rb-dialog .tooltip-inner { max-width: 200px; margin-left: 0px;}
-#x_robert_ctn .rb-input-li{margin-bottom: 6px;}
-#x_robert_ctn .x-rb-dialog-input { 
+#x_robot_ctn .rb-input-li{margin-bottom: 6px;}
+#x_robot_ctn .x-rb-dialog-input { 
     outline: none;
     width: 160px; height: 20px; padding: 0; font-size: 12px; line-height: 14px;
     border-radius: 10px; padding-left: 6px;
@@ -127,8 +127,8 @@ border-color: rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.25);
     margin-bottom: 2px;
 }
 #x_rb_btngo .x-rb-goimg {width: 13px; height: 12px; /*margin-bottom: 3px;*/}
-#x_robert_ctn .x-rb-wordtip { margin-top: 4px;}
-#x_robert_ctn .x_rbchatcont{
+#x_robot_ctn .x-rb-wordtip { margin-top: 4px;}
+#x_robot_ctn .x_rbchatcont{
     text-align: left;
     display: none;
     color: #333333;
