--- a/components/app/robot/robot.scss
+++ b/components/app/robot/robot.scss
@@ -141,3 +141,24 @@ border-color: rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.25);
     /*padding-left: 4px; */
     /*padding-right: 4px;   */
 }
+
+
+// for speaker
+.robot-speech{
+    display: none;
+    
+    position: absolute;
+    left: 158px;
+    color: white;
+    height: 21px;
+    width: 21px;
+    line-height: 21px;
+    padding: 0;
+    top: 39px;
+    font-size: 10px;
+    border-radius: 14px;
+    outline: none;
+    border: none;
+    background: #214A96;
+    cursor: pointer;
+}
