--- a/components/dashboard/collection.html
+++ b/components/dashboard/collection.html
@@ -1077,6 +1077,7 @@
 
     <!-- Vendor scripts -->
     <script src="./dashboard_files/jquery.min.js"></script>
+    <script type="text/javascript" src="../lib/jquery.extra.js"></script>
     <script src="./dashboard_files/jquery-ui.min.js"></script>
     <script src="./dashboard_files/jquery.slimscroll.min.js"></script>
     <script src="./dashboard_files/bootstrap.min.js"></script>
