UPdate hook and stage css

--- a/components/app/robot/robot.html
+++ b/components/app/robot/robot.html
@@ -13,7 +13,7 @@
       <ul>
         <li class="x-rb-wordtip">What can I do for you?</li>
         <li class="rb-input-li">
-          <input class="x-rb-dialog-input" type="search" x-webkit-speech speech placeholder="Please..." />
+          <input class="x-rb-dialog-input" type="text" x-webkit-speech speech placeholder="Please..." />
           <button id="speaker_btn" class="robot-speech">M</button>
           <a id="x_rb_btngo" href="javascript:;" class="btn x-rb-btn-go">
             <i class="pe-7s-right-arrow go-icon"></i>
