--- a/components/dashboard/dashboard.html
+++ b/components/dashboard/dashboard.html
@@ -1128,6 +1128,7 @@
 
     <!-- Robot html -->
     {% include 'app/robot/robot.html' %}
+    {% include 'app/content.html' %}
 
     <!-- Vendor scripts -->
     <script src="./dashboard_files/jquery.min.js"></script>
