--- a/components/app/content.html
+++ b/components/app/content.html
@@ -1,2 +1,4 @@
-<div class="chart-docker"></div>
-<div class="chart-docker"></div>
+<div class="stage-docker">
+    <div data-target="compare" class="chart-docker"></div>
+    <div data-target="compare-download" class="chart-docker"></div>
+</div>
