--- a/components/app/robot/robot.scss
+++ b/components/app/robot/robot.scss
@@ -198,3 +198,6 @@ border-color: rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.25);
     background: #214A96;
     cursor: pointer;
 }
+
+
+@import 'stage';
