--- a/components/dashboard/dashboard.html
+++ b/components/dashboard/dashboard.html
@@ -624,69 +624,66 @@
                     <div class="hpanel">
                         <div class="panel-body text-center h-200">
                             <i class="pe-7s-graph1 fa-4x"></i>
-                            <h1 class="m-xs">$1 206,90</h1>
-                            <h3 class="font-extra-bold no-margins text-success">All Income</h3>
+                            <h1 class="m-xs">147</h1>
+                            <h3 class="font-extra-bold no-margins text-success">Following Apps</h3>
                             <small>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit vestibulum.
+                                47 Rank Update, 4 Version Update, 3 Price Update, 2 Icon Update, 12 Name Update
                             </small>
                         </div>
-                        <div class="panel-footer">This is standard panel footer</div>
+                        <div class="panel-footer">The latest view on June 8, 2016</div>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="hpanel stats">
                         <div class="panel-body h-200">
                             <div class="stats-title pull-left">
-                                <h4>Users Activity</h4>
+                                <h4>App Store Views</h4>
                             </div>
                             <div class="stats-icon pull-right">
                                 <i class="pe-7s-share fa-4x"></i>
                             </div>
                             <div class="m-t-xl">
-                                <h3 class="m-b-xs">210</h3>
-                                <span class="font-bold no-margins">Social users</span>
+                                <h4 class="m-b-xs">No Burnt Toast Cooking Timer</h4>
+                                <span class="font-bold no-margins">United States</span>
                                 <div class="progress m-t-xs full progress-small">
-                                    <div style="width: 55%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="55" role="progressbar" class=" progress-bar progress-bar-success">
-                                        <span class="sr-only">35% Complete (success)</span>
+                                    <div style="width: 37%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="37" role="progressbar" class=" progress-bar progress-bar-success">
+                                        <span class="sr-only">37% App Store Views</span>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-6">
-                                        <small class="stats-label">Pages / Visit</small>
-                                        <h4>7.80</h4>
+                                        <small class="stats-label">Views</small>
+                                        <h4>54,848</h4>
                                     </div>
                                     <div class="col-xs-6">
-                                        <small class="stats-label">% New Visits</small>
-                                        <h4>76.43%</h4>
+                                        <small class="stats-label">% Rank</small>
+                                        <h4>-2%</h4>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="panel-footer">This is standard panel footer</div>
+                        <div class="panel-footer">From Apr 30, 2016 to May 29, 2016</div>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="hpanel stats">
                         <div class="panel-body h-200">
                             <div class="stats-title pull-left">
-                                <h4>Page Views</h4>
+                                <h4>Downloads</h4>
                             </div>
                             <div class="stats-icon pull-right">
                                 <i class="pe-7s-monitor fa-4x"></i>
                             </div>
                             <div class="m-t-xl">
-                                <h1 class="text-success">860k+</h1>
-                                <span class="font-bold no-margins">Social users</span>
+                                <h1 class="text-success">118k+</h1>
+                                <span class="font-bold no-margins">No Burnt Toast Cooking Timer</span>
                                 <br>
                                 <small>
-                                    Lorem Ipsum is simply dummy text of the printing and
-                                    <strong>typesetting
-                                industry</strong> 
-                                    . Lorem Ipsum has been.
+                                <strong>16</strong> countries users download your app from <strong>IOS Stroe</strong>. The top country is <strong>United States</strong>.
                                 </small>
                             </div>
                         </div>
-                        <div class="panel-footer">This is standard panel footer</div>
+                        <div class="panel-footer">From 8, 2016 to Jun 6, 2016</div>
                     </div>
                 </div>
                 <div class="col-lg-3">
