--- a/components/dashboard/dashboard.html
+++ b/components/dashboard/dashboard.html
@@ -184,7 +184,7 @@
                                         </td>
                                         <td>
                                             <a>
-                                                <i class="pe pe-7s-loop text-warning"></i>
+                                                <i class="pe pe-7s-share text-warning"></i>
                                                 <h5>Share</h5>
                                             </a>
                                         </td>
@@ -623,7 +623,7 @@
                 <div class="col-lg-3">
                     <div class="hpanel">
                         <div class="panel-body text-center h-200">
-                            <i class="pe-7s-graph1 fa-4x"></i>
+                            <i class="pe-7s-share fa-4x"></i>
                             <h1 class="m-xs">147</h1>
                             <h3 class="font-extra-bold no-margins text-success">Following Apps</h3>
                             <small>
@@ -640,7 +640,7 @@
                                 <h4>App Store Views</h4>
                             </div>
                             <div class="stats-icon pull-right">
-                                <i class="pe-7s-share fa-4x"></i>
+                                <i class="pe-7s-download fa-4x"></i>
                             </div>
                             <div class="m-t-xl">
                                 <h4 class="m-b-xs">No Burnt Toast Cooking Timer</h4>
