clean up assets

--- a/components/app/content.html
+++ b/components/app/content.html
@@ -1,4 +1,6 @@
 <div class="stage-docker">
-    <div data-target="compare" class="chart-docker"></div>
+    <div data-target="compare" class="chart-docker">
+        {% include 'dashboard/chart_card.html' %}
+    </div>
     <div data-target="compare-download" class="chart-docker"></div>
 </div>
