--- a/components/dashboard/dashboard.html
+++ b/components/dashboard/dashboard.html
@@ -342,7 +342,7 @@
             </div>
             <ul class="nav" id="side-menu">
                 <li class="active">
-                    <a>
+                    <a href="dashboard.html">
                         <span class="nav-label">Dashboard</span>
                     </a>
                 </li>
@@ -456,7 +456,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a>
+                    <a href="Insights.htm">
                         <span class="nav-label">Insights</span>
                     </a>
                 </li>
@@ -478,7 +478,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="http://webapplayers.com/homer_admin-v1.9/options.html">
+                    <a>
                         <span class="nav-label">Pricing</span>
                         <span class="fa arrow"></span>
                     </a>
@@ -492,7 +492,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="http://webapplayers.com/homer_admin-v1.9/grid_system.html">
+                    <a>
                         <span class="nav-label">About</span>
                         <span class="fa arrow"></span>
                     </a>
@@ -640,7 +640,7 @@
                                 <h4>App Store Views</h4>
                             </div>
                             <div class="stats-icon pull-right">
-                                <i class="pe-7s-download fa-4x"></i>
+                                <i class="pe-7s-monitor fa-4x"></i>
                             </div>
                             <div class="m-t-xl">
                                 <h4 class="m-b-xs">No Burnt Toast Cooking Timer</h4>
@@ -672,7 +672,7 @@
                                 <h4>Downloads</h4>
                             </div>
                             <div class="stats-icon pull-right">
-                                <i class="pe-7s-monitor fa-4x"></i>
+                                <i class="pe-7s-download fa-4x"></i>
                             </div>
                             <div class="m-t-xl">
                                 <h1 class="text-success">118k+</h1>
@@ -750,18 +750,18 @@
                                 <div class="btn-group">
                                     <button data-toggle="dropdown" class="btn btn-default btn-xs dropdown-toggle" aria-expanded="false">United States <span class="caret"></span></button>
                                     <ul class="dropdown-menu">
-                                        <li><a href="#">United States</a></li>
-                                        <li><a href="#">China</a></li>
-                                        <li><a href="#">Germany</a></li>
-                                        <li><a href="#">France</a></li>
+                                        <li><a>United States</a></li>
+                                        <li><a>China</a></li>
+                                        <li><a>Germany</a></li>
+                                        <li><a>France</a></li>
                                     </ul>
                                 </div> -
                                 <div class="btn-group">
                                     <button data-toggle="dropdown" class="btn btn-default btn-xs dropdown-toggle" aria-expanded="false">Overall <span class="caret"></span></button>
                                     <ul class="dropdown-menu">
-                                        <li><a href="#">Overall</a></li>
-                                        <li><a href="#">Games</a></li>
-                                        <li><a href="#">Applications</a></li>
+                                        <li><a>Overall</a></li>
+                                        <li><a>Games</a></li>
+                                        <li><a>Applications</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -962,22 +962,22 @@
                                     <div class="btn-group">
                                         <button data-toggle="dropdown" class="btn btn-default btn-xs dropdown-toggle" aria-expanded="false">United States <span class="caret"></span></button>
                                         <ul class="dropdown-menu">
-                                            <li><a href="#">United States</a></li>
-                                            <li><a href="#">China</a></li>
-                                            <li><a href="#">Germany</a></li>
-                                            <li><a href="#">France</a></li>
+                                            <li><a>United States</a></li>
+                                            <li><a>China</a></li>
+                                            <li><a>Germany</a></li>
+                                            <li><a>France</a></li>
                                         </ul>
                                     </div> -
                                     <div class="btn-group">
                                         <button data-toggle="dropdown" class="btn btn-default btn-xs dropdown-toggle" aria-expanded="false">All Ad Platform <span class="caret"></span></button>
                                         <ul class="dropdown-menu">
-                                            <li><a href="#">tapjoy</a></li>
-                                            <li><a href="#">chartboost</a></li>
+                                            <li><a>tapjoy</a></li>
+                                            <li><a>chartboost</a></li>
                                         </ul>
                                     </div>
                                 </div>
                                 <small>
-                                    <a href="blog_details.html" class="btn btn-primary btn-xs">View all</a>
+                                    <a class="btn btn-primary btn-xs">View all</a>
 
                                 </small>
                             </div>
