--- a/components/dashboard/chart_card.html
+++ b/components/dashboard/chart_card.html
@@ -1,21 +1,19 @@
 <div class="hpanel stats">
-    <div class="panel-body h-400">
+    <div class="panel-body h-200">
         <div class="stats-title pull-left">
-            <h4>Ad Expense</h4>
+            <h4>App Store</h4>
         </div>
-        <div class="stats-icon pull-right"> <i class="pe-7s-cash fa-4x"></i>
+        <div class="stats-icon pull-right"> <i class="pe-7s-cash fa-2x"></i>
         </div>
         <div class="clearfix"></div>
-        <div class="">
-            <div class="flot-chart-content" id="facebook_chart" style="padding: 0px; position: relative;">
-                
-            </div>
+        <div class="chart-docker-body flot-chart-content">
+            
         </div>
-        <div class="m-t-xs">
+        <!-- <div class="m-t-xs">
             <div class="row">
                 <div class="col-xs-7">
-                    <small class="stat-label">Cost</small>
-                    <h4>$ 8,882.64</h4>
+                    <small class="stat-label">Diff</small>
+                    <h4>8,882.64</h4>
                 </div>
                 <div class="col-xs-5">
                     <small class="stat-label">Rate</small>
@@ -24,7 +22,7 @@
                     </h4>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
-    <div class="panel-footer">Google Play, From May 9,2016 to Jun 7,2016</div>
+    <div class="panel-footer">Apple Store, From May 9,2016 to Jun 7,2016</div>
 </div>
