--- a/components/dashboard/dashboard.html
+++ b/components/dashboard/dashboard.html
@@ -13,6 +13,7 @@
 
 <body class="fixed-navbar fixed-sidebar">
     <!-- Simple splash screen-->
+    <div class="stage-overlay"></div>
     {% include 'dashboard/loading_splash.html' %}
     <!--[if lt IE 7]>
     <p class="alert alert-danger">
