--- a/components/dashboard/menu.html
+++ b/components/dashboard/menu.html
@@ -81,7 +81,7 @@
             </div>
         </div>
         <ul class="nav" id="side-menu">
-            <li class="active">
+            <li class="active current">
                 <a>
                     <span class="nav-label">Dashboard</span>
                 </a>
