--- a/components/app/robot/stage.scss
+++ b/components/app/robot/stage.scss
@@ -2,15 +2,55 @@
  * For stage
  */
 
+.stage-overlay {
+    visibility: hidden;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.36);
+    z-index: 991;
+
+    -webkit-transition: opacity 0.3s ease-in;
+    transition: opacity 0.3s ease-in;
+
+    &.show {
+        visibility: visible;
+        opacity: 1;
+    }
+}
+
 .stage-docker {
     position: absolute;
     z-index: 1900;
     right: 20px;
     top: 60px;
-    width: 640px;
-
+    width: 480px;
     >.chart-docker {
         display: none;
+        transform: scale(1);
+        position: relative;
+        top: 0;
+        right: 0;
+        opacity: 1;
+
+        -webkit-transition: transform 0.3s ease-in, opacity 0.3s ease-in;
+        -moz-transition: transform 0.3s ease-in, opacity 0.3s ease-in;
+        transition: transform 0.3s ease-in, opacity 0.3s ease-in;
+
+        &.ani-to-favorite {
+            transform: scale(0.01);
+            opacity: 0;
+            top: -212px;
+            right: 15px;
+        }
+
+    }
+
+    .chart-docker-body {
+        height: 240px;
+        // width: 480px;
+        // height: 240px;
     }
     // height: 220px;
 }
