update favorite html

--- a/components/dashboard/menu.html
+++ b/components/dashboard/menu.html
@@ -123,7 +123,8 @@
             <li>
                 <a>
                     <span class="nav-label">Intelligence</span>
-                    <span class="label label-success pull-right">Prenium</span>
+                    <!-- <span class="fa arrow"></span> -->
+                    <span class="label label-success pull-right">Prem</span>
                 </a>
                 <ul class="nav nav-second-level collapse" aria-expanded="false">
                     <li>
@@ -196,7 +197,7 @@
                 </ul>
             </li>
             <li>
-                <a>
+                <a href="/insights">
                     <span class="nav-label">Insights</span>
                 </a>
             </li>
