--- a/components/dashboard/favorite.html
+++ b/components/dashboard/favorite.html
@@ -27,7 +27,7 @@
     {% include 'dashboard/header.html' %}
 
     <!-- Navigation -->
-    {% include 'dashboard/menu.html' %}
+    {% include 'dashboard/menu.html' with {current: 'favorite'} %}
     <!-- Main Wrapper -->
     <div id="wrapper" style="min-height: 952px;">
 
