--- a/components/dashboard/insights.html
+++ b/components/dashboard/insights.html
@@ -25,7 +25,7 @@
     <!-- Header -->
     {% include 'dashboard/header.html' %}
     <!-- Navigation -->
-    {% include 'dashboard/menu.html' %}
+    {% include 'dashboard/menu.html' with {current: 'insights'} %}
 
 <!-- Main Wrapper -->
 <div id="wrapper" style="min-height: 1811px;">
