--- a/components/dashboard/common_css.html
+++ b/components/dashboard/common_css.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="./dashboard_files/metisMenu.css">
 <link rel="stylesheet" href="./dashboard_files/animate.css">
 <link rel="stylesheet" href="./dashboard_files/bootstrap.css">
+<link rel="stylesheet" href="./dashboard_files/bootstrap-tour.min.css">
 
 <!-- App styles -->
 <link rel="stylesheet" href="./dashboard_files/pe-icon-7-stroke.css">
