--- a/components/dashboard/common_script.html
+++ b/components/dashboard/common_script.html
@@ -4,6 +4,8 @@
 <script src="./dashboard_files/jquery-ui.min.js"></script>
 <script src="./dashboard_files/jquery.slimscroll.min.js"></script>
 <script src="./dashboard_files/bootstrap.min.js"></script>
+<script src="./dashboard_files/bootstrap-tour.min.js"></script>
+
 <script src="./dashboard_files/jquery.flot.js"></script>
 <script src="./dashboard_files/jquery.flot.resize.js"></script>
 <script src="./dashboard_files/jquery.flot.pie.js"></script>
