--- a/components/dashboard/header.html
+++ b/components/dashboard/header.html
@@ -128,6 +128,11 @@
                         <i class="pe-7s-upload pe-7s-news-paper"></i>
                     </a>
                 </li> -->
+                <li>
+                    <a id="tour">
+                        <i class="pe-7s-help1"></i>
+                    </a>
+                </li>
                 <li class="dropdown">
                     <a>
                         <i class="pe-7s-upload pe-rotate-90"></i>
