Add world map not work

--- a/components/app/content.html
+++ b/components/app/content.html
@@ -5,4 +5,5 @@
     <div data-target="compare" class="chart-docker">
         {% include 'dashboard/chart_card.html' %}
     </div>
+    <div id="download_map_ctn" class="map-docker"></div>
 </div>
