--- a/components/app/robot/stage.scss
+++ b/components/app/robot/stage.scss
@@ -53,6 +53,15 @@
         // height: 240px;
     }
     // height: 220px;
+    
+
+    .map-docker {
+        display: none;
+        width: 480;
+        height: 320px;
+        min-height: 320px;
+        background-color: #000;
+    }
 }
 
 
