--- a/components/dashboard/common_script.html
+++ b/components/dashboard/common_script.html
@@ -16,4 +16,5 @@
 <!-- App scripts -->
 <script src="./dashboard_files/homer.js"></script>
 <script src="./dashboard_files/charts.js"></script>
+<script type="text/javascript" src="../lib/echarts.common.min.js"></script>
 <script type="text/javascript" src="../lib/highcharts-4.2.5/highcharts.js"></script>
