--- a/components/dashboard/dashboard_files/style.css
+++ b/components/dashboard/dashboard_files/style.css
@@ -2304,12 +2304,13 @@ body.fullscreen-panel-mode {
   background: #fff;
 }
 #side-menu li.current {
-  background: #4FC15A;
+  /*background: #4FC15A;*/
+  background: rgba(126, 193, 79, 0.55);
   color: #FFF;
 }
 
 #side-menu.nav li.current a:hover, #side-menu.nav li.current a:focus {
-  background: #4FC15A;
+  background: rgba(126, 193, 79, 0.55);
 }
 
 #side-menu li.current a{
