--- a/components/dashboard/chart_card.html
+++ b/components/dashboard/chart_card.html
@@ -3,7 +3,7 @@
         <div class="stats-title pull-left">
             <h4>App Store</h4>
         </div>
-        <div class="stats-icon pull-right"> <i class="pe-7s-cash fa-2x"></i>
+        <div class="stats-icon pull-right"> <a class="btn-star"><i class="pe-7s-star fa-2x"></i></a>
         </div>
         <div class="clearfix"></div>
         <div class="chart-docker-body flot-chart-content">
