--- a/components/dashboard/favorite.html
+++ b/components/dashboard/favorite.html
@@ -250,6 +250,7 @@
                         <div class="panel-footer">All data comes from Appannie</div>
                     </div>
                 </div>
+                {% include 'dashboard/favorite_chart_card.html' %}
             </div>
             
             <!-- {% include 'dashboard/favorite_row.html' %} -->
@@ -380,8 +381,7 @@
                     </div>
                 </div>
                 <small>
-                    Lorem Ipsum is simply dummy text of the printing simply all dummy text.
-                Many desktop publishing packages and web page editors.
+                    Today income and data chart are accureate and immediate.
                 </small>
             </div>
 
@@ -393,7 +393,7 @@
 
     <!-- Common Script -->
     {% include 'dashboard/common_script.html' %}
-    <script type="text/javascript" src="./collection.js"></script>
+    <script type="text/javascript" src="./favorite.js"></script>
 
 </body>
 </html>
