--- a/components/dashboard/menu.html
+++ b/components/dashboard/menu.html
@@ -8,7 +8,7 @@
                 <div class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown">
                         <small class="text-muted">
-                            NB@appannie.com <b class="caret"></b>
+                            napo@appannie.com <b class="caret"></b>
                         </small>
                     </a>
                     <ul class="dropdown-menu animated flipInX m-t-xs">
