--- a/components/dashboard/chart_card.html
+++ b/components/dashboard/chart_card.html
@@ -1,4 +1,7 @@
 <div class="hpanel stats">
+    <a class="chart-close-btn" href="javascript:;">
+        <i class="pe-7s-close-circle fa-2x"></i>
+    </a>
     <div class="panel-body h-200">
         <div class="stats-title pull-left">
             <h4>App Store</h4>
