--- a/components/dashboard/dashboard.html
+++ b/components/dashboard/dashboard.html
@@ -651,68 +651,9 @@
     {% include 'dashboard/common_script.html' %}
 
     <!-- Robot init -->
+    <script type="text/javascript" src="../lib/map/china.js"></script>
+    <script type="text/javascript" src="../lib/map/world.js"></script>
     <script type="text/javascript" src="../app/main.js"></script>
-
-    <script>
-    $(function() {
-            $('#tour').click(function() {
-            // Instance the tour
-            var tour = new Tour({
-                backdrop: true,
-            onShown: function(tour) {
-
-                // ISSUE    - https://github.com/sorich87/bootstrap-tour/issues/189
-                // FIX      - https://github.com/sorich87/bootstrap-tour/issues/189#issuecomment-49007822
-
-                // You have to write your used animated effect class
-                // Standard animated class
-                $('.animated').removeClass('fadeIn');
-                // Animate class from animate-panel plugin
-                $('.animated-panel').removeClass('zoomIn');
-
-            },
-              steps: [
-              {
-                element: ".following-apps",
-                title: "This is your following apps",
-                content: "The max is 100 Apps"
-              },
-              {
-                element: ".top-charts",
-                title: "Top charts Section",
-                content: "Top 5 Apps by country and market"
-              },
-              {
-                element: ".top-charts-market",
-                title: "Top charts Section",
-                content: "Clicking change market"
-              },
-              {
-                element: ".top-charts-country",
-                title: "Top charts Section",
-                content: "dropdown list change country"
-              },
-              {
-                element: ".top-charts-category",
-                title: "Top charts Section",
-                content: "dropdown list change category"
-              },
-              {
-                element: ".top-charts-more",
-                title: "Top charts Section",
-                content: "Clicking view more apps"
-              }
-            ]});
-
-            // Initialize the tour
-            tour.init();
-
-            // Start the tour
-            tour.restart();
-        });
-    })
-    
-    </script>
 </body>
 
 </html>
