--- a/components/dashboard/header.html
+++ b/components/dashboard/header.html
@@ -128,9 +128,14 @@
                         <i class="pe-7s-upload pe-7s-news-paper"></i>
                     </a>
                 </li> -->
-                <li>
+                <li style="display: none;">
                     <a id="tour">
                         <i class="pe-7s-help1"></i>
+                    </a>
+                </li>
+                <li>
+                    <a id="robot_switcher" href="javascript:;">
+                        <i class="pe-7s-light"></i>
                     </a>
                 </li>
                 <li class="dropdown">
