--- a/components/dashboard/common_script.html
+++ b/components/dashboard/common_script.html
@@ -10,13 +10,17 @@
 <script src="./dashboard_files/jquery.flot.resize.js"></script>
 <script src="./dashboard_files/jquery.flot.pie.js"></script>
 <script src="./dashboard_files/curvedLines.js"></script>
-<script src="./dashboard_files/index.js"></script>
+<script src="./dashboard_files/jquery.plot.spline.js"></script>
 <script src="./dashboard_files/metisMenu.min.js"></script>
 <script src="./dashboard_files/icheck.min.js"></script>
 <script src="./dashboard_files/jquery.peity.min.js"></script>
-<script src="./dashboard_files/index_1.js"></script>
+<script src="./dashboard_files/jquery.sparkline.js"></script>
+
+<!-- Robot Lib -->
+<script type="text/javascript" src="../lib/echarts.min.js"></script>
+<script type="text/javascript" src="../lib/highcharts-4.2.5/highcharts.js"></script>
+
 <!-- App scripts -->
 <script src="./dashboard_files/homer.js"></script>
 <script src="./dashboard_files/charts.js"></script>
-<script type="text/javascript" src="../lib/echarts.min.js"></script>
-<script type="text/javascript" src="../lib/highcharts-4.2.5/highcharts.js"></script>
+
