--- a/components/app/robot/stage.scss
+++ b/components/app/robot/stage.scss
@@ -104,6 +104,7 @@ body .restore-stage {
         // min-height: 320px;
         background-color: #000;
         padding-top: 10px;
+        margin-bottom: 25px;
     }
 
     .add-favorite-btn{
