--- a/components/dashboard/menu.html
+++ b/components/dashboard/menu.html
@@ -234,7 +234,7 @@
             </li>
             <li class="{% if current == 'favorite' %}active current{% endif %}">
                 <a href="/favorite">
-                    <span class="nav-label">Favorite</span>
+                    <span class="nav-label">Favorites</span>
                 </a>
             </li>
             <li>
