--- a/components/dashboard/dashboard_files/style.css
+++ b/components/dashboard/dashboard_files/style.css
@@ -1,3 +1,7 @@
+/**
+ * For Appannie FE New Vision
+ */
+
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700");
 /* MARGINS & PADDINGS */
 .p-xxs {
@@ -2237,6 +2241,7 @@ body.fullscreen-panel-mode {
 .profile-picture {
   padding: 20px 20px;
   text-align: center;
+  background-color: #FFF;
 }
 .stats-box div {
   display: inline-block;
