--- a/components/app/common_script.html
+++ b/components/app/common_script.html
@@ -1,4 +1,5 @@
-
+<!-- build:js ../lib/app_lib.js -->
 <script type="text/javascript" src="../lib/jquery.js"></script>
 <script type="text/javascript" src="../lib/jquery.extra.js"></script>
 <script type="text/javascript" src="../lib/highcharts-4.2.5/highcharts.js"></script>
+<!-- endbuild -->
