--- a/components/dashboard/common_script.html
+++ b/components/dashboard/common_script.html
@@ -1,4 +1,5 @@
 <!-- Vendor scripts -->
+<!-- build:js ./dashboard_files/lib_base.js -->
 <script src="./dashboard_files/jquery.min.js"></script>
 <script type="text/javascript" src="../lib/jquery.extra.js"></script>
 <script src="./dashboard_files/jquery-ui.min.js"></script>
@@ -15,12 +16,16 @@
 <script src="./dashboard_files/icheck.min.js"></script>
 <script src="./dashboard_files/jquery.peity.min.js"></script>
 <script src="./dashboard_files/jquery.sparkline.js"></script>
-
+<!-- endbuild -->
 <!-- Robot Lib -->
+<!-- build:js ../lib/dashboard_lib.js -->
 <script type="text/javascript" src="../lib/echarts.min.js"></script>
 <script type="text/javascript" src="../lib/highcharts-4.2.5/highcharts.js"></script>
+<!-- endbuild -->
 
 <!-- App scripts -->
+<!-- build:js ./dashboard_files/homer_package.js -->
 <script src="./dashboard_files/homer.js"></script>
 <script src="./dashboard_files/charts.js"></script>
+<!-- endbuild -->
 
