--- a/components/dashboard/dashboard.html
+++ b/components/dashboard/dashboard.html
@@ -651,10 +651,11 @@
     {% include 'dashboard/common_script.html' %}
 
     <!-- Robot init -->
-
+    <!-- build:js ../app/dashboard_main.js -->
     <script type="text/javascript" src="../lib/map/china.js"></script>
     <script type="text/javascript" src="../lib/map/world.js"></script>
     <script type="text/javascript" src="../app/main.js"></script>
+    <!-- endbuild -->
 
 </body>
 
